# Blank-Mack-Oss-Screensaver

./: .gitignore  Blank-Mack-Oss-Screensaver-Info.plist.in  CMakeLists.txt
Blank Mack-Oss Screensaver/: Blank_Mack_Oss_ScreensaverView.h  Blank_Mack_Oss_ScreensaverView.m  Info.plist
Blank Mack-Oss Screensaver.xcodeproj/: project.pbxproj
Blank Mack-Oss Screensaver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Blank Mack-Oss Screensaver.xcodeproj/xcuserdata/joshua.xcuserdatad/xcschemes/: xcschememanagement.plist
